--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 dotenv = "0.15.0"
 rust-argon2 = "1.0"
+chrono = "0.4.23"
+bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
 
 [dependencies.rocket]
 version = "0.5.0-rc.2"
