--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dotenv = "0.15.0"
 rust-argon2 = "1.0"
 chrono = "0.4.23"
 bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [dependencies.rocket]
 version = "0.5.0-rc.2"
@@ -20,3 +21,6 @@ features = ["json", "secrets"]
 version = "2.2.0"
 default-features = false
 features = ["sync"] 
+
+[dev-dependencies]
+mockall = "0.11.2"
